@@ -32,6 +32,11 @@ namespace gui
 		/** \return The override font (may be 0) */
 		virtual IGUIFont* getOverrideFont(void) const = 0;
 
+		//! Get the font which is used right now for drawing
+		/** Currently this is the override font when one is set and the
+		font of the active skin otherwise */
+		virtual IGUIFont* getActiveFont() const = 0;
+
 		//! Sets another color for the text.
 		/** If set, the static text does not use the EGDC_BUTTON_TEXT color defined
 		in the skin, but the set color instead. You don't need to call
@@ -91,10 +96,10 @@ namespace gui
 		/** If the text is broken, this returns the width of the widest line
 		\return The width of the text, or the widest broken line. */
 		virtual s32 getTextWidth(void) const = 0;
-		
+
 		//! Set whether the text in this label should be clipped if it goes outside bounds
 		virtual void setTextRestrainedInside(bool restrainedInside) = 0;
-		
+
 		//! Checks if the text in this label should be clipped if it goes outside bounds
 		virtual bool isTextRestrainedInside() const = 0;
 
